Fucked Up Evil Update
was following a tutorial to get a better options menu set up, and something the tutorial said would work just doesnt and sunk cost fallacy is keeping me from just undo-ing it all so heres the updated non-functioning code for the me in probably a few weeks to fix.

will be posting a build with working multiplayer tho, since that works fine. just disabling the options menu for now.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../releases/bitch suika/0/lbs-multiplayer_test.exe"
+export_path="../../releases/bitch suika/0.0.6 pre/windows/lbs-multiplayer_test.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../releases/bitch suika/local_multiplayer_test/linux/lbs-multiplayer-test.x86_64"
+export_path="../../releases/bitch suika/0.0.6 pre/linux/lil-bitch-suika-0.0.6.Pre-Release.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
