--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../releases/bitch suika/0.0.6 pre/windows/lbs-multiplayer_test.exe"
+export_path="../../releases/bitch suika/0.0.6.2/win/lbs-0.0.6-win.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -19,7 +19,7 @@ encrypt_directory=false
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../releases/bitch suika/0.0.6 pre/linux/lil-bitch-suika-0.0.6.Pre-Release.x86_64"
+export_path="../../releases/bitch suika/0.0.6.2/linux/lbs-0.0.6-linux.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -82,7 +82,7 @@ encrypt_directory=false
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
